# rgb4_lvgl_lifftefs

./: CMakeLists.txt  README.md  partitions.csv  read.txt  sdkconfig  sdkconfig.old
components/lv_lib_split_jpg/: lv_sjpg.c  lv_sjpg.h
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/demos/keypad_encoder/: README.md
components/lvgl__lvgl/src/: lv_conf_internal.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/i2c_init/: i2c_lcd.c  i2c_lcd.h
main/lvgl_lcd/: CMakeLists.txt  lvgl_init.c  lvgl_init.h
main/st7701/: CMakeLists.txt  st7701.c  st7701.h
